// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div>
  <div
    className="APIComponent-root-156"
  >
    <header
      className="MuiPaper-root-172 MuiPaper-elevation4-178 MuiAppBar-root-164 MuiAppBar-positionFixed-165 MuiAppBar-colorPrimary-170 mui-fixed"
    >
      <div
        className="MuiToolbar-root-199 MuiToolbar-regular-201 MuiToolbar-gutters-200 APIComponent-nowrap-158"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-209 MuiIconButton-root-203 MuiIconButton-colorInherit-204 APIComponent-menuButton-159"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-208"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-212"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-219"
          />
        </button>
        <h2
          className="MuiTypography-root-226 MuiTypography-title-232 MuiTypography-colorInherit-245 APIComponent-flex-157"
        >
          Point Pods
        </h2>
      </div>
    </header>
    <div
      className="APIComponent-spacer-161"
    />
  </div>
  <button
    aria-label="New Tournament"
    className="MuiButtonBase-root-209 MuiButton-root-275 MuiButton-fab-290 MuiButton-contained-284 MuiButton-containedSecondary-286 MuiButton-raised-287 MuiButton-raisedSecondary-289 APIComponent-actionButton-155"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-276"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-212"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-219"
    />
  </button>
  <div
    className="TournamentCards-root-299"
  >
    <div
      className="MuiPaper-root-172 MuiPaper-elevation1-175 MuiPaper-rounded-173 MuiCard-root-302 TournamentCards-card-300"
      id="not-found"
    >
      <div
        className="MuiCardHeader-root-303"
      >
        <div
          className="MuiCardHeader-content-306"
        >
          <span
            className="MuiTypography-root-226 MuiTypography-headline-231 MuiCardHeader-title-307"
          >
            No Tournaments Found
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div>
  <div
    className="APIComponent-root-156"
  >
    <header
      className="MuiPaper-root-172 MuiPaper-elevation4-178 MuiAppBar-root-164 MuiAppBar-positionFixed-165 MuiAppBar-colorPrimary-170 mui-fixed"
    >
      <div
        className="MuiToolbar-root-199 MuiToolbar-regular-201 MuiToolbar-gutters-200 APIComponent-nowrap-158"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-209 MuiIconButton-root-203 MuiIconButton-colorInherit-204 APIComponent-menuButton-159"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-208"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-212"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-219"
          />
        </button>
        <h2
          className="MuiTypography-root-226 MuiTypography-title-232 MuiTypography-colorInherit-245 APIComponent-flex-157"
        >
          Point Pods
        </h2>
      </div>
    </header>
    <div
      className="APIComponent-spacer-161"
    />
  </div>
  <button
    aria-label="New Tournament"
    className="MuiButtonBase-root-209 MuiButton-root-275 MuiButton-fab-290 MuiButton-contained-284 MuiButton-containedSecondary-286 MuiButton-raised-287 MuiButton-raisedSecondary-289 APIComponent-actionButton-155"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-276"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-212"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-219"
    />
  </button>
  <div
    className="TournamentCards-root-299"
  >
    <div
      className="MuiPaper-root-172 MuiPaper-elevation1-175 MuiPaper-rounded-173 MuiCard-root-302 TournamentCards-card-300"
      id="mock0"
    >
      <div
        className="MuiCardHeader-root-303"
      >
        <div
          className="MuiCardHeader-content-306"
        >
          <span
            className="MuiTypography-root-226 MuiTypography-headline-231 MuiCardHeader-title-307"
          >
            test0
          </span>
          <span
            className="MuiTypography-root-226 MuiTypography-body1-235 MuiTypography-colorTextSecondary-249 MuiCardHeader-subheader-308"
          >
            cat0
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-309"
      >
        <p
          className="MuiTypography-root-226 MuiTypography-body1-235"
        >
          4 Total Players
        </p>
        <p
          className="MuiTypography-root-226 MuiTypography-body1-235"
        >
          3 Active Players
        </p>
      </div>
      <div
        className="MuiCardActions-root-310"
      >
        <a
          className="MuiButtonBase-root-209 MuiButton-root-275 MuiButton-text-277 MuiButton-flat-280 MuiButton-sizeSmall-296 TournamentCards-right-301 MuiCardActions-action-311"
          href="/tournament/mock0"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-276"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-219"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-172 MuiPaper-elevation1-175 MuiPaper-rounded-173 MuiCard-root-302 TournamentCards-card-300"
      id="mock2"
    >
      <div
        className="MuiCardHeader-root-303"
      >
        <div
          className="MuiCardHeader-content-306"
        >
          <span
            className="MuiTypography-root-226 MuiTypography-headline-231 MuiCardHeader-title-307"
          >
            test2
          </span>
          <span
            className="MuiTypography-root-226 MuiTypography-body1-235 MuiTypography-colorTextSecondary-249 MuiCardHeader-subheader-308"
          >
            cat0
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-309"
      >
        <p
          className="MuiTypography-root-226 MuiTypography-body1-235"
        >
          4 Total Players
        </p>
        <p
          className="MuiTypography-root-226 MuiTypography-body1-235"
        >
          4 Active Players
        </p>
      </div>
      <div
        className="MuiCardActions-root-310"
      >
        <a
          className="MuiButtonBase-root-209 MuiButton-root-275 MuiButton-text-277 MuiButton-flat-280 MuiButton-sizeSmall-296 TournamentCards-right-301 MuiCardActions-action-311"
          href="/tournament/mock2"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-276"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-219"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
